<resources>
    <string name="applabel" translatable="false">&applabel;</string>
    <string name="fullapplabel" translatable="false">&fullapplabel;</string>
    <string name="pairing">Pairing…</string>
    <string name="pair_pc_offline">Computer is offline</string>
    <string name="pair_incorrect_pin">Incorrect PIN</string>
    <string name="pair_already_in_progress">Pairing already in progress</string>
    <string name="wol_waking_msg">It might take a few seconds for your PC to wake up.</string>
    <string name="wol_fail">Failed to send Wake-On-LAN packets</string>
    <string name="error_pc_offline">Computer is offline</string>
    <string name="error_manager_not_running">The ComputerManager service is not running. Please wait a few seconds or restart the app.</string>
    <string name="error_unknown_host">Failed to connect to the host PC. Please check if the host PC is still streaming.</string>
    <string name="error_404">The host PC returned an HTTP 404 error. Make sure your host PC is running a supported GPU, and no other remote desktop software is running.</string>
    <string name="error_lost_connection">The network connection was lost.</string>
    <string name="title_decoding_error">Video Decoder Crashed</string>
    <string name="message_decoding_error">&applabel; has crashed due to an incompatibility with this device\'s video decoder. Try adjusting the streaming settings if the crashes continue.</string>
    <string name="title_decoding_reset">Video Settings Reset</string>
    <string name="message_decoding_reset">Your device\'s video decoder continues to crash at your selected streaming settings. Your streaming settings have been reset to default.</string>
    <string name="error_usb_prohibited">USB accessory usage is prohibited by your device administrator. Please contact your administrator to gain access to this feature.</string>
    <string name="unable_to_pin_shortcut">Your current launcher does not allow for creating pinned shortcuts.</string>
    <string name="video_decoder_init_failed">Video decoder failed to initialize. Your device may not support the selected resolution or frame rate.</string>
    <string name="no_video_received_error">No video received from host.</string>
    <string name="no_frame_received_error">Your network connection isn\'t performing well. Reduce your video bitrate setting or try a faster connection.</string>
    <string name="early_termination_error">Something went wrong with your host PC when starting the stream.\n\nMake sure you don\'t have any DRM-protected content open on your host PC. You can also try restarting your host PC.</string>
    <string name="frame_conversion_error">The host PC reported a fatal video encoding error.\n\nTry disabling HDR mode, changing the streaming resolution, or changing your host PC\'s display resolution.</string>
    <string name="check_ports_msg">Check your firewall and port forwarding rules for port(s):</string>
    <string name="conn_establishing_title">Establishing Connection</string>
    <string name="conn_establishing_msg">Starting connection</string>
    <string name="conn_metered">Warning: Your active network connection is metered!</string>
    <string name="conn_client_latency">Average frame decoding latency:</string>
    <string name="conn_client_latency_hw">hardware decoder latency:</string>
    <string name="conn_hardware_latency">Average hardware decoding latency:</string>
    <string name="conn_starting">Starting</string>
    <string name="conn_error_title">Connection Error</string>
    <string name="conn_error_msg">Failed to start</string>
    <string name="conn_terminated_title">Connection Terminated</string>
    <string name="conn_terminated_msg">The connection was terminated</string>
    <string name="failed_to_start_msg_with_param">Failed to start %1$s.</string>
    <string name="conn_stage_none">none</string>
    <string name="conn_stage_platform_initialization">platform initialization</string>
    <string name="conn_stage_name_resolution">name resolution</string>
    <string name="conn_stage_audio_stream_initialization">audio stream initialization</string>
    <string name="conn_stage_RTSP_handshake">RTSP handshake</string>
    <string name="conn_stage_control_stream_initialization">control stream initialization</string>
    <string name="conn_stage_video_stream_initialization">video stream initialization</string>
    <string name="conn_stage_input_stream_initialization">input stream initialization</string>
    <string name="conn_stage_control_stream_establishment">control stream establishment</string>
    <string name="conn_stage_video_stream_establishment">video stream establishment</string>
    <string name="conn_stage_audio_stream_establishment">audio stream establishment</string>
    <string name="conn_stage_input_stream_establishment">input stream establishment</string>
    <string name="conn_error_code_5031">The host\'s concurrent stream limit has been reached. Stop an existing stream or increase the \'Channels\' value in &hostlabel; Settings UI.</string>
    <string name="conn_error_code_5032">Failed to initialize video capture/encoding. Is a display connected and turned on?</string>
    <string name="conn_error_code_5033">No running app to resume.</string>
    <string name="conn_error_code_5034">All sessions must be disconnected before quitting.</string>
    <string name="help">Help</string>
    <string name="slow_connection_msg">Slow connection to host PC detected.\nReduce your streaming bitrate to improve connection.</string>
    <string name="poor_connection_msg">Poor connection to host PC</string>
    <string name="perf_overlay_streamdetails">Video stream: %1$s %2$.2f FPS</string>
    <string name="perf_overlay_decoder">Decoder: %1$s</string>
    <string name="perf_overlay_incomingfps">Incoming frame rate from network: %1$.2f FPS</string>
    <string name="perf_overlay_renderingfps">Rendering frame rate: %1$.2f FPS</string>
    <string name="perf_overlay_hostprocessinglatency">Host processing latency min/max/average: %1$.1f/%2$.1f/%3$.1f ms</string>
    <string name="perf_overlay_netdrops">Frames dropped by your network connection: %1$.2f%%</string>
    <string name="perf_overlay_netlatency">Average network latency: %1$d ms (variance: %2$d ms)</string>
    <string name="perf_overlay_dectime">Average decoding time: %1$.2f ms</string>
    <string name="title_add_pc">Add PC Manually</string>
    <string name="toast_controller_type_changed">Gamepad type may be changed due to motion sensor emulation</string>
    <string name="request_nexus_permission" translatable="false">Request Nexus Permission</string>
    <string name="start_pcview" translatable="false">Start PcView</string>
    <string name="rn_start_game">Start Streaming</string>
    <string name="rn_btn_continue">Continue</string>
    <string name="shared_content_provider_permission_description">Access to games and pairing information stored on Nexus</string>
    <string name="placeholder_short" translatable="false">Lorem ipsum</string>
    <string name="placeholder_medium" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="placeholder_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="placeholder_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="placeholder_paragraph_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="test_text" translatable="false">@string/placeholder_medium</string>
    <string name="rn_data_access_permission_explanation">&applabel; needs to access data from &nexus;. Please grant permission for both apps to communicate with each other.</string>
    <string name="rn_razer_nexus_required_message">&applabel; is meant to be used together with &nexus; to play PC games from your mobile device. Do you want to download it now?</string>
    <string name="rn_razer_nexus_needs_update_message">&applabel; needs the latest version of &nexus; to play PC games from your mobile device. Do you want to update it now?</string>
    <string name="rn_download">Download</string>
    <string name="rn_update">Update</string>
    <string name="rn_done">Done</string>
    <string name="rn_allow">Allow</string>
    <string name="rn_skip">Skip</string>
    <string name="rn_back">Back</string>
    <string name="rn_accept">Accept</string>
    <string name="rn_pair">Pair</string>
    <string name="rn_unpair">Unpair</string>
    <string name="rn_start_play">Start Play</string>
    <string name="rn_settings">Settings</string>
    <string name="rn_manually_pair">Manually Pair</string>
    <string name="rn_retry">Retry</string>
    <string name="rn_cancel">Cancel</string>
    <string name="cux_terms_of_service_2" translatable="false">https://www.razer.com/legal/terms-of-service-mobile</string>
    <string name="tos">Terms of Service</string>
    <string name="cux_url_privacy_policy" translatable="false">https://www.razer.com/legal/privacy-policy-mobile</string>
    <string name="pp">Privacy Policy</string>
    <string name="open_source_notice">Open Source Software Notice</string>
    <string name="rn_setting_neuron_video_settings">Video settings</string>
    <string name="rn_setting_neuron_display_mode">Display mode</string>
    <string name="rn_setting_neuron_video_bitrate">Video bitrate</string>
    <string name="rn_setting_neuron_frame_pacing">Frame pacing</string>
    <string name="rn_setting_neuron_general_settings">General settings</string>
    <string name="rn_setting_neuron_advanced_settings">Advanced settings</string>
    <string name="rn_setting_neuron_touch_screen">Touch screen control</string>
    <string name="rn_about_app_name" translatable="false">&fullapplabel;</string>
    <string name="rn_copyright">Copyright © %s Razer Inc.</string>
    <string name="rn_all_rights_reserved">All rights reserved.</string>
    <string name="sans_serif_bold" translatable="false">sans-serif-medium</string>
    <string name="sans_serif_medium" translatable="false">sans-serif-medium</string>
    <string name="sans_serif_regular" translatable="false">sans-serif</string>
</resources>