<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">


    <ImageView
        android:duplicateParentState="true"
        android:id="@+id/ic_permission_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="@dimen/margin_14x"
        android:layout_marginEnd="@dimen/margin_24x"
        android:src="@drawable/ic_pairing_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:background="@android:color/transparent"
        android:duplicateParentState="true"
        android:id="@+id/tv_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_allow"
        app:layout_constraintStart_toEndOf="@+id/ic_permission_icon"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:duplicateParentState="true"
            android:id="@+id/tv_permission_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMinTextSize="11sp"
            android:autoSizeTextType="uniform"
            android:ellipsize="end"
            android:fontFamily="@string/sans_serif_medium"
            android:maxLines="1"
            android:textColor="@color/oobe_permission_text"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/placeholder_short" />

        <TextView
            android:duplicateParentState="true"
            android:id="@+id/tv_permission_subtitle"
            style="@style/RnOobeTextOnBackgroundVariant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMinTextSize="11sp"
            android:autoSizeTextType="uniform"
            android:ellipsize="end"
            android:fontFamily="@string/sans_serif_regular"
            android:maxLines="2"
            android:text="@string/placeholder_medium"
            android:textColor="@color/oobe_permission_text"
            android:textSize="14sp" />
    </LinearLayout>


    <ImageView
        android:duplicateParentState="true"
        android:visibility="visible"
        android:id="@+id/iv_checked"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/circle_primary"
        android:backgroundTint="@color/oobe_permission_tick_background"
        android:src="@drawable/ic_tick_22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_allow"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/oobe_permission_tick_image" />

    <com.google.android.material.button.MaterialButton
        android:visibility="invisible"
        android:duplicateParentState="true"
        android:id="@+id/btn_allow"
        style="@style/RnButtonHintStyle"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:text="@string/placeholder_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />
</merge>